# OFAMGX

./: CMakeLists.txt
amgx/: AmgXSolver.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  init.inl  misc.inl  setA.inl  solve.inl
amgx/plugins/: Makefile
include/: AmgXSolver.hpp  amgx_c.h  amgx_config.h
plugins/: CMakeLists.txt
plugins/OpenFOAM/matrices/lduMatrix/solvers/: ofamgx_PBiCG.C  ofamgx_PBiCG.H  ofamgx_PBiCG.dep
plugins/OpenFOAM/matrices/lduMatrix/solvers/ofamgx/: ofamgx_openfoam.H  paralution_openfoam.H
